Upload ZIP with MinIO
